unpackaged/objects/SupplyProductJunction__c.object
<CustomObject>
    <fields>
        <fullName>NewBasePrice__c</fullName>
        <label>New Base Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Supply Product Junctions</relationshipLabel>
        <relationshipName>Supply_Product_Junctions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Supply__c</fullName>
        <label>Supply</label>
        <referenceTo>Supply__c</referenceTo>
        <relationshipLabel>Supply Product Junctions</relationshipLabel>
        <relationshipName>Supply_Product_Junctions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Supply Product Junction</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>ID name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supply Product Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>